adiciona html e css

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         elit nonummy nibh</p>
                 </li>
             </ul>
-
+     </main>
         <section class="portifolio">
             <h1>Portifólio</h1>
             <p>Neque porro quisquam est, qui dolorem
@@ -74,14 +74,14 @@
             </p>
             <nav class="menuseg">
                 <ul>
-                    <p>
                     <li><a href="#">ALL</a></li>
                     <li><a href="#">WEB</a></li>
                     <li><a href="#">APPS</a></li>
                     <li><a href="#">ÍCONES</a></li>
-                    </p>
                 </ul>
             </nav>
+            <div>
+            <section cLass="imagem">
                 <ul>
                     <li>
                         <img src="img/projeto_1.png" alt="">
@@ -98,8 +98,8 @@
                         <img src="img/projeto_4.png" alt="">
                         <h5>BLOG / MAGAZINE FLAT UI KIT</h5>
                     </li>
-                    <button>CARREGAR MAIS</button>
                 </ul>
-    </main>
+            </div>
+            <input type="button" value="Carregar mais">
 </body>
 </html>
