--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
                     <li><a href="#">ÍCONES</a></li>
                 </ul>
             </nav>
+            <form name="form_main"></form>
+            <div>
+                <span id="hour"></span>:<span id="minute"></span>:
+            <span id="second"></span>:<span
+            id="millisecond"></span>
+            </div>
+
+            <br />
+
+            <button type="button" name="start">start</button>
+            <button type="button" name="pause">pause</button>
+            <button type="button" name="reset">reset</button>
+        </form>
             <div>
             <section cLass="imagem">
                 <ul>
